--- a/lat-hinh.html
+++ b/lat-hinh.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>lật hình</title>
+    <title>Game Picachu</title>
 
     <link rel="stylesheet" href="lat-hinh.css">
 </head>
